--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@emotion/cache": "11.13.5",
-    "@emotion/react": "11.13.3",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "11.13.5",
     "@mui/icons-material": "6.1.8",
     "@mui/material": "6.1.8",
